2. 用户管理模块接入与模型服务最大并发测试

--- a/llm_backend/docs/03_ollama_deepseek_r1_chat_api.ipynb
+++ b/llm_backend/docs/03_ollama_deepseek_r1_chat_api.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -153,20 +153,20 @@
      "output_type": "stream",
      "text": [
       "生成响应: {\n",
-      "  \"model\": \"deepseek-r1:1.5b\",\n",
-      "  \"created_at\": \"2025-08-10T15:50:17.814845Z\",\n",
+      "  \"model\": \"deepseek-r1:32b\",\n",
+      "  \"created_at\": \"2025-02-13T11:18:25.515272041Z\",\n",
       "  \"message\": {\n",
       "    \"role\": \"assistant\",\n",
-      "    \"content\": \"<think>\\n嗯，用户让我生成一个关于人工智能的简短介绍。首先，我需要确定这个介绍应该涵盖哪些主要方面。人工智能现在是一个非常热门的话题，涉及到技术、应用、未来展望等方面。\\n\\n我应该从定义开始，说明人工智能是什么，它涉及机器学习、深度学习这些现代技术。然后提到它对社会和经济的影响，比如效率提升、个性化服务的提供等。接下来，可以描述一些具体的应用领域，如医疗、金融、教育和制造业，说明它们各自的特点和成就。\\n\\n同时，需要强调AI面临的挑战和未来的机遇，这样可以让介绍更有深度，也更全面。最后，简要提到技术进步带来的变革，让读者明白人工智能的发展趋势。\\n\\n另外，用户可能希望这个介绍既专业又易于理解，所以用词不能太复杂，但也要准确。结构上可以分成几个部分：定义、影响、应用、挑战和未来展望，这样逻辑清晰。\\n\\n现在，我得把这些点组织起来，确保信息全面且简洁。比如，在定义里提到机器学习、深度学习，然后在影响部分强调效率提升、个性化服务、自动化处理等。应用部分可以详细说明医疗诊断的精准化、金融投资的风险评估、教育个性化教学和制造业高精度制造。\\n\\n挑战方面，应该包括数据隐私、算法偏见以及伦理问题。最后，展望未来，AI可能成为人类社会的基石，推动创新和社会进步。\\n\\n总的来说，这个简短介绍需要涵盖人工智能的基本概念、应用和影响，同时提到面临的挑战，并展望其未来前景。这样既全面又不失简洁，能够有效地传达人工智能的重要性和潜力。\\n</think>\\n\\n人工智能（Artificial Intelligence, AI）是当前备受关注的人类智能化领域，它通过机器学习（Machine Learning）、深度学习（Deep Learning）等技术模拟人类的思维和认知能力，广泛应用于各个领域。\\n\\n人工智能推动了社会的进步、经济的增长和生活质量的提升。从医疗诊断到金融投资，从教育到制造业，AI为 humans 和 machines 的互动创造了前所未有的机遇。然而，AI也面临着数据隐私、算法偏见、伦理问题等挑战，这些都要求人类保持清醒地思考 AI 的应用方向。\\n\\n未来，人工智能可能会成为人类社会的重要基石，推动创新、社会治理和可持续发展。尽管需要解决诸多技术难题，但随着技术进步和社会需求的持续增长，人工智能将继续引领人类文明前行。\"\n",
+      "    \"content\": \"<think>\\n好，我现在需要帮用户生成一个关于人工智能的简短介绍。首先，我得理解用户的需求是什么。他们可能对AI不太了解，想要一个简洁明了的概述。\\n\\n我应该从基础开始讲起，比如定义。人工智能是模拟人类智能的技术，这点很重要。然后，我可以提到主要应用领域，比如机器学习、自然语言处理和计算机视觉，这样可以让介绍更有针对性。\\n\\n接下来，我需要说明AI的应用范围，比如在医疗、金融和交通中的作用，这样用户能明白它的实际价值。同时，也不能忽视伦理和社会影响，这部分也是大家关心的点。\\n\\n还要提到当前的发展阶段，强调它是一个快速发展的领域，这样能展示出未来的潜力。最后，保持整体内容简明扼要，适合快速阅读。\\n\\n可能用户需要这个介绍用于学习、演讲或者作为参考资料。所以信息要准确，结构清晰，重点突出。我要确保涵盖主要方面，同时不显得冗长。这样用户就能得到一个全面又简洁的人工智能简介了。\\n</think>\\n\\n人工智能（Artificial Intelligence, AI）是指通过模拟人类智能的技术，使计算机系统能够执行如学习、推理、问题解决和自然语言处理等任务。AI技术广泛应用于医疗、金融、交通等领域，帮助提高效率并解决复杂问题。随着算法的进步和数据的增加，人工智能正逐步改变我们的生活方式和社会结构。\"\n",
       "  },\n",
       "  \"done_reason\": \"stop\",\n",
       "  \"done\": true,\n",
-      "  \"total_duration\": 5617516700,\n",
-      "  \"load_duration\": 38669900,\n",
+      "  \"total_duration\": 22607165543,\n",
+      "  \"load_duration\": 9711125924,\n",
       "  \"prompt_eval_count\": 13,\n",
-      "  \"prompt_eval_duration\": 138192000,\n",
-      "  \"eval_count\": 491,\n",
-      "  \"eval_duration\": 5439565000\n",
+      "  \"prompt_eval_duration\": 3497000000,\n",
+      "  \"eval_count\": 286,\n",
+      "  \"eval_duration\": 9396000000\n",
       "}\n"
      ]
     }
@@ -176,11 +176,11 @@
     "import json\n",
     "\n",
     "# 设置 API 端点\n",
-    "chat_url = \"http://127.0.0.1:11434/api/chat\"    # 这里需要根据实际情况进行修改\n",
+    "chat_url = \"http://192.168.110.131:11434/api/chat\"    # 这里需要根据实际情况进行修改\n",
     "\n",
     "# 示例数据\n",
     "chat_payload = {\n",
-    "    \"model\": \"deepseek-r1:1.5b\",   # 这里需要根据实际情况进行修改\n",
+    "    \"model\": \"deepseek-r1:32b\",   # 这里需要根据实际情况进行修改\n",
     "    \"messages\": [\n",
     "        {\n",
     "            \"role\": \"user\",  # 消息角色，用户发送的消息\n",
@@ -482,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
