--- a/llm_backend/docs/04_ollama_deepseek_r1_openai_chat.ipynb
+++ b/llm_backend/docs/04_ollama_deepseek_r1_openai_chat.ipynb
@@ -47,49 +47,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletion(id='chatcmpl-459', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='<think>\\n嗯，用户问的是“你是想了解什么是人工智能吗？我给你一个简短的介绍”，然后让我继续。看来他是在考虑以后学习或者工作中是否有涉及到AI的问题，所以对这个概念有些兴趣。\\n\\n首先我要明白，AI，全称 Artificial Intelligence，是指 machines能够执行人 intelligence tasks 之类的。这可能包括理解语言、处理图像、生成文字等。但我觉得他可能还不太了解，所以我需要简单介绍一下基础的概念以及它的应用。\\n\\n然后，我应该提到机器学习，因为它是一种算法，可以用来训练模型来模拟和超越人类的智力水平。另外还要强调数据的重要性，因为AI的成功离不开大量的数据和好的算法设计。然后，我可以将机器学习与深度学习联系起来，说明后者是前者的深化和扩展，特别是当有大量复杂信息比如图像或视频时。\\n\\n最后，总结一下 AI 的应用领域，分为人机交互、数据分析、自动驾驶等，以及它带来的机会和技术挑战，这样用户在决定是不是转向AI或者利用AI时会有更清晰的认识。\\n</think>\\n\\n人工智能（Artificial Intelligence, AI）是一门研究可以用计算机系统模拟人类智能的学科。它可以理解为一种以计算机系统为元组的智能系统。智能系统能够理解和学习，并有自己的判断力和创造力。\\n\\n### 基本概念\\n1. **人机交互**：AI通过自然语言、图像识别、语音合成等技术与人类进行对话、分析和控制。\\n2. **数据分析**：涉及机器处理大量的数据，提供洞见（knowledge）以帮助人类理解和改善其环境。\\n3. **自动驾驶**：基于实时的位置感知、传感器数据以及复杂模型的系统实现完全自动的汽车。\\n\\n### 主要研究方向\\n- **人机交互领域的应用和学习理论**\\n  - 设计更自然人机交互的平台，例如拼音输入框或语音合成工具。\\n- **自动化决策**\\n  - 设计更可靠的机器智能判断机构，如判断客户忠诚度、预测市场趋势等。\\n- **机器学习**\\n  - 开发可以理解人类认知规律和模式的数据模型，像特征工程等技术。\\n\\n### 挑战\\n1. **数据问题**：AI在无监督学派和有监督学派上下各有千秋，其处理复杂数据的能力强弱。\\n2. **伦理和社会责任**：如何平衡AI的安全性、隐私性和伦理道德。\\n\\n### 应用\\n- 生物科学（如医疗AI）\\n- 交通与交通管理系统（Autonomous Car）\\n- 医疗服务\\n\\n人工智能是近年来推动社会进步的热门技术，不过其发展也有相应的挑战和争议。', refusal=None, role='assistant', annotations=None, audio=None, function_call=None, tool_calls=None))], created=1754841726, model='deepseek-r1:1.5b', object='chat.completion', service_tier=None, system_fingerprint='fp_ollama', usage=CompletionUsage(completion_tokens=548, prompt_tokens=10, total_tokens=558, completion_tokens_details=None, prompt_tokens_details=None))\n",
       "<think>\n",
-      "嗯，用户问的是“你是想了解什么是人工智能吗？我给你一个简短的介绍”，然后让我继续。看来他是在考虑以后学习或者工作中是否有涉及到AI的问题，所以对这个概念有些兴趣。\n",
+      "好吧，我现在要了解一下什么是人工智能。嗯，首先，这个词听起来有点高科技的感觉，对吧？但具体是什么意思呢？\n",
       "\n",
-      "首先我要明白，AI，全称 Artificial Intelligence，是指 machines能够执行人 intelligence tasks 之类的。这可能包括理解语言、处理图像、生成文字等。但我觉得他可能还不太了解，所以我需要简单介绍一下基础的概念以及它的应用。\n",
+      "我记得人工智能常被缩写为AI，可能和计算机有关。是不是说让机器像人一样思考？好像是这样。比如现在的手机、电脑或者机器人能做些智能的事情，可能都属于这个范畴。\n",
       "\n",
-      "然后，我应该提到机器学习，因为它是一种算法，可以用来训练模型来模拟和超越人类的智力水平。另外还要强调数据的重要性，因为AI的成功离不开大量的数据和好的算法设计。然后，我可以将机器学习与深度学习联系起来，说明后者是前者的深化和扩展，特别是当有大量复杂信息比如图像或视频时。\n",
+      "那人工智能有什么具体的例子呢？比如说Siri或者小爱同学这些语音助手，它们能听懂我的话并回答问题，是不是也是AI的一部分？还有AlphaGo战胜围棋世界冠军的新闻，这应该就是AI的应用吧。那这些都是在模拟人类的思考和决策过程吗？\n",
       "\n",
-      "最后，总结一下 AI 的应用领域，分为人机交互、数据分析、自动驾驶等，以及它带来的机会和技术挑战，这样用户在决定是不是转向AI或者利用AI时会有更清晰的认识。\n",
+      "然后，听说有两种类型的人工智能，一种是弱人工智能，一种是强人工智能。弱人工智能好像是针对特定任务设计的，比如识别图像或翻译语言，这种不需要具备真正的理解和感受能力，对吧？而强人工智能则更接近人类，有自我意识，这样的机器可能现在还没有出现，还停留在理论上。\n",
+      "\n",
+      "那AI的工作原理是什么呢？听说涉及到很多算法和大数据。数据越多，模型训练得越好，预测结果也就越准确。比如机器学习，这是一个重要的分支，它是通过让机器从大量数据中找到规律而不是依靠明确的指令来工作的。深度学习则是机器学习的一种方法，使用多层神经网络来模拟人脑的学习方式，处理像图像识别这样的复杂任务。\n",
+      "\n",
+      "人工智能的发展历史是怎样的？好像开始于上世纪50年代，在达特茅斯会议上首次提出了AI的概念。那时候可能还只是初步的想法，后来经历了几起几落，比如70年代的冬天是因为技术还不成熟，应用受限。到了现在，计算能力加强了，算法也进步了，加上大数据的应用，AI才有了突飞猛进的发展。\n",
+      "\n",
+      "那人工智能有哪些应用呢？听说在医疗、金融、交通这些领域都有应用。例如，医疗图像分析可以帮助医生更准确地诊断疾病；金融科技中可能用于检测欺诈行为或者智能投资；自动驾驶汽车也是AI的一个重要方向，涉及环境感知和决策系统。还有，个性化推荐在电商和社交媒体中越来越普遍，提升用户体验。\n",
+      "\n",
+      "当然，人工智能的发展也带来了一系列挑战。数据隐私和安全问题很重要，因为很多AI应用需要收集大量用户数据，如何保护这些数据不被滥用是一大难题。伦理道德方面，比如自动驾驶车遇到紧急情况的决策选择，这不仅关系到算法设计，还涉及到人性化的考量。劳动力替代也是一个讨论热点，担心AI会取代许多传统的工作岗位，从而引发社会问题。\n",
+      "\n",
+      "总的来说，人工智能正在快速发展，并在多个领域带来变革。它帮助我们解决了许多复杂的问题，提高了生产效率和生活质量。不过，随之而来的挑战也需要被认真对待。未来的发展需要技术、伦理和社会三方面的共同努力，确保人工智能能够造福全人类。\n",
+      "\n",
+      "嗯，我可能有些地方理解得不够准确，比如AI到底是如何进行推理的？这些算法具体是怎么工作的呢？或许还需要进一步学习相关的课程或者资料来深入理解。\n",
       "</think>\n",
       "\n",
-      "人工智能（Artificial Intelligence, AI）是一门研究可以用计算机系统模拟人类智能的学科。它可以理解为一种以计算机系统为元组的智能系统。智能系统能够理解和学习，并有自己的判断力和创造力。\n",
+      "人工智能（Artificial Intelligence, AI）是一种模拟人类智能的技术，使计算机系统能执行复杂的任务，如学习、推理和问题解决。它通过算法处理数据，模仿人类认知功能，应用于各个领域。\n",
       "\n",
-      "### 基本概念\n",
-      "1. **人机交互**：AI通过自然语言、图像识别、语音合成等技术与人类进行对话、分析和控制。\n",
-      "2. **数据分析**：涉及机器处理大量的数据，提供洞见（knowledge）以帮助人类理解和改善其环境。\n",
-      "3. **自动驾驶**：基于实时的位置感知、传感器数据以及复杂模型的系统实现完全自动的汽车。\n",
+      "主要类型包括弱人工智能，专注于特定任务，与强人工智能不同，后者是具备自我意识的通用型AI，尚未实现。\n",
       "\n",
-      "### 主要研究方向\n",
-      "- **人机交互领域的应用和学习理论**\n",
-      "  - 设计更自然人机交互的平台，例如拼音输入框或语音合成工具。\n",
-      "- **自动化决策**\n",
-      "  - 设计更可靠的机器智能判断机构，如判断客户忠诚度、预测市场趋势等。\n",
-      "- **机器学习**\n",
-      "  - 开发可以理解人类认知规律和模式的数据模型，像特征工程等技术。\n",
+      "AI的工作原理涉及机器学习和深度学习，利用大量数据分析规律，提升准确性。发展历史始于1956年，经历起伏后，在计算能力和大数据推动下迅速进步。\n",
       "\n",
-      "### 挑战\n",
-      "1. **数据问题**：AI在无监督学派和有监督学派上下各有千秋，其处理复杂数据的能力强弱。\n",
-      "2. **伦理和社会责任**：如何平衡AI的安全性、隐私性和伦理道德。\n",
+      "应用广泛，涵盖医疗、金融、交通等，如诊断辅助和自动驾驶。同时面临技术和伦理挑战，需平衡创新与社会影响。\n",
       "\n",
-      "### 应用\n",
-      "- 生物科学（如医疗AI）\n",
-      "- 交通与交通管理系统（Autonomous Car）\n",
-      "- 医疗服务\n",
-      "\n",
-      "人工智能是近年来推动社会进步的热门技术，不过其发展也有相应的挑战和争议。\n"
+      "总体而言，AI正改变世界，带来机遇与挑战，需多方面协作确保其为人类福祉服务。\n"
      ]
     }
    ],
@@ -97,12 +92,12 @@
     "from openai import OpenAI # type: ignore\n",
     "\n",
     "client = OpenAI(\n",
-    "    base_url='http://127.0.0.1:11434/v1/',     # 这里修改成可访问的 IP\n",
+    "    base_url='http://192.168.110.131:11434/v1/',     # 这里修改成可访问的 IP\n",
     "    api_key='ollama',   # 这里随便写，但是api_key字段一定要有\n",
     ")\n",
     "\n",
     "chat_completion = client.chat.completions.create(\n",
-    "    model='deepseek-r1:1.5b',\n",
+    "    model='deepseek-r1:32b',\n",
     "    messages=[\n",
     "        {\n",
     "            'role': 'user',\n",
@@ -110,6 +105,7 @@
     "        }\n",
     "    ],\n",
     ")\n",
+    "\n",
     "print(chat_completion.choices[0].message.content)"
    ]
   },
@@ -374,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
