--- a/llm_backend/docs/05_online_deepseekv3&r1.ipynb
+++ b/llm_backend/docs/05_online_deepseekv3&r1.ipynb
@@ -185,58 +185,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "大模型（**Large Language Model, LLM**）是指基于海量数据和庞大参数规模构建的**人工智能模型**，通常属于**深度学习**中的**自然语言处理（NLP）**领域。这类模型通过大规**模预训练**学习语言规律，能够执行文本生成、问答、翻译等多种任务。例如，OpenAI的**GPT-4**、Google的**PaLM 2**、Meta的**LLaMA**等均属于大模型范畴。\n",
+      "大模型（Large Model）通常指的是具有**大量参数**的机器学习模型，尤其是在自然语言处理（NLP）和计算机视觉（CV）领域中表现出色的模型。这些模型的参数量可以达到**数十亿甚至数千亿**，能够处理极其复杂的任务。\n",
       "\n",
-      "---\n",
-      "\n",
-      "### **核心特点**\n",
-      "1. **参数规模大**  \n",
-      "   参数量可达**数十亿甚至万亿级**（如GPT-3有1750亿参数），强大的参数 capacity 使其能捕捉复杂的语言模式和常识。\n",
+      "### 大模型的几个关键特点：\n",
+      "1. **参数量巨大**：大模型的参数量通常在数亿到数千亿之间，这使得它们能够捕捉和学习非常复杂的模式和关系。\n",
       "   \n",
-      "2. **预训练+微调范式**  \n",
-      "   - **预训练**：通过海量文本（如书籍、网页）学习通用语言表示。  \n",
-      "   - **微调**：针对特定任务（如客服、编程）用标注数据优化模型。\n",
+      "2. **训练数据量大**：大模型通常需要**海量数据**进行训练，这些数据可以来自互联网、书籍、文章等多种来源。\n",
       "\n",
-      "3. **多任务泛化能力**  \n",
-      "   无需额外训练即可完成未见过的任务（如写诗、代码补全），即**零样本（Zero-shot）**或**少样本（Few-shot）**学习。\n",
+      "3. **计算资源需求高**：训练和部署大模型需要大量的**计算资源**，包括高性能的GPU、TPU以及大规模的计算集群。\n",
       "\n",
-      "4. **依赖算力与数据**  \n",
-      "   训练需要**高性能计算集群（如GPU/TPU）**和**TB级文本数据**，推理阶段也可能需要大量资源。\n",
+      "4. **多功能性**：大模型通常具有**通用性**，可以应用于多种任务，如文本生成、翻译、问答、图像识别等。\n",
+      "\n",
+      "5. **涌现能力（Emergent Abilities）**：一些大模型显示出在训练数据中未明确训练的**新能力**，例如解决数学问题或生成连贯的长文。\n",
       "\n",
       "---\n",
       "\n",
-      "### **关键技术**\n",
-      "- **Transformer架构**：核心是**自注意力机制**，能高效处理长文本依赖。\n",
-      "- **缩放定律（Scaling Laws）**：模型性能随参数、数据、算力的增加而显著提升。\n",
-      "- **对齐技术**：通过RLHF（人类反馈强化学习）使输出更符合人类价值观。\n",
+      "### 典型的大模型示例：\n",
+      "1. **GPT（Generative Pre-trained Transformer）系列**：由OpenAI开发，参数量从GPT-3的1750亿到GPT-4的更大规模。\n",
+      "2. **BERT（Bidirectional Encoder Representations from Transformers）**：由Google开发，用于理解文本的双向表示。\n",
+      "3. **PaLM（Pathways Language Model）**：由Google开发，参数量达到5400亿。\n",
+      "4. **LLaMA（Large Language Model Meta AI）**：由Meta开发，参数量从70亿到650亿不等。\n",
       "\n",
       "---\n",
       "\n",
-      "### **应用场景**\n",
-      "- **内容生成**：文章、对话、代码（如GitHub Copilot）。  \n",
-      "- **智能助手**：ChatGPT、Claude等交互式AI。  \n",
-      "- **企业服务**：客服自动化、文档分析、知识库问答。  \n",
+      "### 大模型的应用场景：\n",
+      "- **自然语言处理**：文本生成、机器翻译、情感分析、问答系统等。\n",
+      "- **计算机视觉**：图像生成、物体检测、图像分类等。\n",
+      "- **多模态任务**：结合文本和图像的处理，例如生成图像描述或从文本生成图像。\n",
+      "- **科学研究**：辅助药物研发、蛋白质结构预测等。\n",
       "\n",
       "---\n",
       "\n",
-      "### **局限性**\n",
-      "- **幻觉（Hallucination）**：可能生成虚假或误导性内容。  \n",
-      "- **偏见与安全风险**：训练数据中的偏差可能导致歧视性输出。  \n",
-      "- **高成本**：训练和部署需巨额投入。\n",
-      "\n",
-      "---\n",
-      "\n",
-      "### **与通用人工智能（AGI）的关系**\n",
-      "大模型是迈向AGI的重要一步，但尚不具备真正的理解、推理和自主意识，更多是**基于统计的模式匹配**。\n",
-      "\n",
-      "如需进一步了解具体模型或技术细节，可以随时追问！"
+      "大模型是人工智能领域的一个重要发展方向，但也面临**数据隐私、能源消耗、训练成本**等挑战。"
      ]
     }
    ],
@@ -245,12 +232,12 @@
     "import json\n",
     "\n",
     "# 注意：这里大家如果选择的是非官方源，请根据实际的 base_url 来进行替换\n",
-    "client = OpenAI(api_key=\"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\", base_url=\"https://openrouter.ai/api/v1/\")\n",
+    "client = OpenAI(api_key=\"sk-qnd9HaQi6LCjVNJowQqKyalanLiJV7gJr1N2zp1OsZpiVzMN\", base_url=\"https://api.055ai.cn/v1/\")\n",
     "\n",
     "\n",
     "# 调用聊天接口，启用流式输出\n",
     "response = client.chat.completions.create(\n",
-    "    model=\"deepseek/deepseek-chat-v3-0324:free\",  # 根据实际情况替换模型名称\n",
+    "    model=\"deepseek-ai/DeepSeek-V3\",  # 根据实际情况替换模型名称\n",
     "    messages=[\n",
     "        {\"role\": \"system\", \"content\": \"你是一位乐于助人的AI助手\"},\n",
     "        {\"role\": \"user\", \"content\": \"请问什么是大模型？\"},\n",
@@ -461,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
