--- a/llm_backend/docs/06_fastapi_quickstart.ipynb
+++ b/llm_backend/docs/06_fastapi_quickstart.ipynb
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests  # type: ignore\n",
     "import json\n",
     "\n",
-    "def generate_text(prompt: str, model: str = \"deepseek-r1:1.5b\", stream: bool = False) -> dict:\n",
+    "def generate_text(prompt: str, model: str = \"deepseek-r1:32b\", stream: bool = False) -> dict:\n",
     "    \"\"\"\n",
     "    调用生成接口，返回生成的文本。\n",
     "\n",
@@ -75,7 +75,7 @@
     "    :return: 生成的响应\n",
     "    \"\"\"\n",
     "    # 设置 API 端点\n",
-    "    generate_url = \"http://127.0.0.1:11434/api/generate\"  # 这里需要根据实际情况进行修改\n",
+    "    generate_url = \"http://192.168.110.131:11434/api/generate\"  # 这里需要根据实际情况进行修改\n",
     "\n",
     "    # 示例数据\n",
     "    generate_payload = {\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,9 +111,9 @@
      "output_type": "stream",
      "text": [
       "生成响应: {\n",
-      "  \"model\": \"deepseek-r1:1.5b\",\n",
-      "  \"created_at\": \"2025-08-11T11:39:57.706358698Z\",\n",
-      "  \"response\": \"<think>\\n好的，我现在收到一个用户的请求：“请生成一个关于人工智能的简短介绍。”首先，我需要理解用户的需求是什么。看起来他想要一个简洁明了的概述，可能用于教育、演讲或者兴趣爱好。\\n\\n接下来，我要考虑人工智能的基本概念和重要性。通常这类介绍会提到它的发展历史、应用领域以及当前的关键挑战。比如，提到机器学习、深度学习，以及它们在医疗、制造业等领域的应用。\\n\\n然后，我需要确保内容准确且简洁。避免太长的描述，只突出主要点。同时，要说明AI不仅是技术进步，更是人类认知能力的模拟，这样能更全面地展示其价值和影响。\\n\\n最后，检查是否涵盖了人工智能的主要方面：概念、发展、应用以及挑战。这样用户的需求就能得到满足，介绍既专业又易于理解。\\n</think>\\n\\n人工智能（Artificial Intelligence, AI）是近年来发展迅速的一门技术领域，它基于计算机系统的自动学习与模拟，能够以人脑那样的模式进行复杂的人类思维活动。AI通过机器学习和深度学习等方法，能够在短时间内完成大量重复性工作，并为人类提供决策支持、数据分析、语音识别、图像识别等服务。\\n\\n人工智能在多个行业具有重要应用价值，例如医疗领域（如自动驾驶汽车、精准医学）、制造业（机器人控制、自动化生产）、金融等领域。尽管人工智能取得了巨大进展，但其局限性和伦理问题也始终是一个关注点。\",\n",
+      "  \"model\": \"deepseek-r1:32b\",\n",
+      "  \"created_at\": \"2025-02-21T04:33:38.534420627Z\",\n",
+      "  \"response\": \"<think>\\n嗯，用户让我生成一个关于人工智能的简短介绍。首先，我得理解用户的需求是什么。可能他需要这个介绍用于学习、演讲或者工作汇报之类的场合。\\n\\n接下来，我应该考虑内容结构。通常，一个好的介绍应该涵盖定义、主要技术、应用领域以及一些伦理或社会影响的问题。这样可以让读者全面了解AI的重要性和发展现状。\\n\\n然后，我需要用简单明了的语言来表达，避免太专业的术语，让更多人能理解。比如，提到机器学习和深度学习时，可以稍微解释一下它们的基本概念。\\n\\n还要考虑用户可能没有说出来的深层需求，比如他们是否需要最新的发展动态或者未来的趋势？不过这次是简短介绍，所以可能不需要深入细节。\\n\\n最后，确保整个介绍逻辑清晰，层次分明，让读者能够快速抓住重点。这样写出来的内容既全面又简洁，应该能满足用户的需求。\\n</think>\\n\\n人工智能（Artificial Intelligence, AI）是指通过计算机模拟人类智能的系统或技术。它涵盖机器学习、深度学习和自然语言处理等领域，使机器能够执行复杂的任务，如图像识别、语音助手和自动驾驶等。AI正在改变我们的生活方式和工作方式，并在医疗、金融、教育等多个领域展现出巨大潜力。然而，随着其快速发展，也引发了一些关于隐私、伦理和社会影响的讨论。\",\n",
       "  \"done\": true,\n",
       "  \"done_reason\": \"stop\",\n",
       "  \"context\": [\n",
@@ -131,15 +131,10 @@
       "    151645,\n",
       "    151648,\n",
       "    198,\n",
-      "    99692,\n",
+      "    106287,\n",
       "    3837,\n",
-      "    107520,\n",
-      "    104381,\n",
-      "    46944,\n",
-      "    107494,\n",
-      "    34859,\n",
-      "    36987,\n",
-      "    14880,\n",
+      "    20002,\n",
+      "    104029,\n",
       "    43959,\n",
       "    46944,\n",
       "    101888,\n",
@@ -148,162 +143,188 @@
       "    98237,\n",
       "    99534,\n",
       "    100157,\n",
-      "    32945,\n",
+      "    1773,\n",
       "    101140,\n",
       "    3837,\n",
       "    35946,\n",
-      "    85106,\n",
+      "    49828,\n",
       "    101128,\n",
       "    20002,\n",
       "    104378,\n",
       "    102021,\n",
       "    1773,\n",
-      "    104544,\n",
-      "    42411,\n",
-      "    103945,\n",
-      "    46944,\n",
-      "    110485,\n",
-      "    30858,\n",
-      "    34187,\n",
-      "    9370,\n",
-      "    113608,\n",
-      "    3837,\n",
       "    87267,\n",
+      "    42411,\n",
+      "    85106,\n",
+      "    99487,\n",
+      "    100157,\n",
       "    100751,\n",
-      "    99460,\n",
+      "    100134,\n",
       "    5373,\n",
       "    105465,\n",
       "    100631,\n",
-      "    100565,\n",
-      "    103059,\n",
-      "    3407,\n",
+      "    99257,\n",
+      "    105032,\n",
+      "    106896,\n",
+      "    108430,\n",
+      "    1773,\n",
+      "    198,\n",
+      "    198,\n",
       "    104326,\n",
       "    3837,\n",
-      "    104515,\n",
+      "    35946,\n",
+      "    99730,\n",
       "    101118,\n",
-      "    104455,\n",
-      "    105166,\n",
-      "    101290,\n",
-      "    33108,\n",
-      "    99335,\n",
-      "    33071,\n",
+      "    43815,\n",
+      "    100166,\n",
       "    1773,\n",
       "    102119,\n",
-      "    105230,\n",
+      "    3837,\n",
+      "    114128,\n",
       "    100157,\n",
-      "    36993,\n",
-      "    104496,\n",
-      "    99652,\n",
-      "    103949,\n",
-      "    100022,\n",
+      "    99730,\n",
+      "    102994,\n",
+      "    91282,\n",
+      "    5373,\n",
+      "    99558,\n",
+      "    99361,\n",
       "    5373,\n",
       "    99892,\n",
       "    100650,\n",
       "    101034,\n",
-      "    67949,\n",
-      "    105386,\n",
-      "    104036,\n",
+      "    101883,\n",
+      "    112811,\n",
+      "    57191,\n",
+      "    99328,\n",
+      "    99564,\n",
+      "    103936,\n",
+      "    1773,\n",
+      "    99654,\n",
+      "    107366,\n",
+      "    104785,\n",
+      "    100011,\n",
+      "    99794,\n",
+      "    15469,\n",
+      "    101945,\n",
+      "    105178,\n",
+      "    99185,\n",
+      "    105044,\n",
+      "    1773,\n",
+      "    198,\n",
+      "    198,\n",
+      "    101889,\n",
+      "    3837,\n",
+      "    35946,\n",
+      "    118976,\n",
+      "    100405,\n",
+      "    30858,\n",
+      "    34187,\n",
+      "    109824,\n",
+      "    36407,\n",
+      "    102124,\n",
+      "    3837,\n",
+      "    101153,\n",
+      "    99222,\n",
+      "    104715,\n",
+      "    116925,\n",
+      "    3837,\n",
+      "    107863,\n",
+      "    17340,\n",
+      "    26232,\n",
+      "    101128,\n",
       "    1773,\n",
       "    101912,\n",
       "    3837,\n",
       "    104496,\n",
       "    102182,\n",
       "    100134,\n",
-      "    5373,\n",
+      "    33108,\n",
       "    102217,\n",
       "    100134,\n",
+      "    13343,\n",
       "    3837,\n",
-      "    101034,\n",
+      "    73670,\n",
+      "    106683,\n",
+      "    104136,\n",
+      "    100158,\n",
       "    104017,\n",
-      "    18493,\n",
-      "    100182,\n",
-      "    5373,\n",
-      "    104863,\n",
-      "    49567,\n",
-      "    104799,\n",
-      "    99892,\n",
-      "    3407,\n",
-      "    101889,\n",
+      "    105166,\n",
+      "    101290,\n",
+      "    1773,\n",
+      "    198,\n",
+      "    198,\n",
+      "    104019,\n",
+      "    101118,\n",
+      "    20002,\n",
+      "    87267,\n",
+      "    80443,\n",
+      "    36587,\n",
+      "    104355,\n",
+      "    114246,\n",
+      "    100354,\n",
       "    3837,\n",
-      "    35946,\n",
+      "    101912,\n",
+      "    99650,\n",
+      "    64471,\n",
       "    85106,\n",
-      "    103944,\n",
-      "    43815,\n",
-      "    102188,\n",
-      "    100136,\n",
-      "    110485,\n",
+      "    108324,\n",
+      "    99185,\n",
+      "    104299,\n",
+      "    100631,\n",
+      "    105735,\n",
+      "    101226,\n",
+      "    11319,\n",
+      "    100632,\n",
+      "    103969,\n",
+      "    20412,\n",
+      "    98237,\n",
+      "    99534,\n",
+      "    100157,\n",
+      "    3837,\n",
+      "    99999,\n",
+      "    87267,\n",
+      "    104689,\n",
+      "    100403,\n",
+      "    104449,\n",
       "    1773,\n",
-      "    101153,\n",
-      "    99222,\n",
-      "    45861,\n",
-      "    9370,\n",
-      "    53481,\n",
-      "    3837,\n",
-      "    91680,\n",
-      "    102017,\n",
-      "    99558,\n",
-      "    27442,\n",
-      "    1773,\n",
-      "    91572,\n",
-      "    3837,\n",
-      "    30534,\n",
-      "    66394,\n",
-      "    15469,\n",
-      "    105912,\n",
-      "    99361,\n",
-      "    101300,\n",
-      "    3837,\n",
-      "    103979,\n",
-      "    103971,\n",
-      "    102875,\n",
-      "    99788,\n",
-      "    9370,\n",
-      "    105717,\n",
-      "    3837,\n",
-      "    99654,\n",
-      "    26232,\n",
-      "    33126,\n",
-      "    100011,\n",
-      "    29490,\n",
-      "    101987,\n",
-      "    41146,\n",
-      "    100162,\n",
-      "    33108,\n",
-      "    99564,\n",
-      "    3407,\n",
+      "    198,\n",
+      "    198,\n",
       "    100161,\n",
       "    3837,\n",
-      "    101071,\n",
-      "    64471,\n",
-      "    114369,\n",
-      "    104455,\n",
-      "    104396,\n",
-      "    99522,\n",
-      "    5122,\n",
-      "    101290,\n",
-      "    5373,\n",
-      "    99185,\n",
-      "    5373,\n",
-      "    99892,\n",
-      "    101034,\n",
-      "    104036,\n",
+      "    103944,\n",
+      "    101908,\n",
+      "    100157,\n",
+      "    104913,\n",
+      "    104542,\n",
+      "    3837,\n",
+      "    100920,\n",
+      "    109556,\n",
+      "    3837,\n",
+      "    99258,\n",
+      "    104785,\n",
+      "    100006,\n",
+      "    101098,\n",
+      "    104609,\n",
+      "    99887,\n",
       "    1773,\n",
       "    99654,\n",
+      "    61443,\n",
+      "    104355,\n",
+      "    43815,\n",
+      "    99929,\n",
+      "    100011,\n",
+      "    99518,\n",
+      "    110485,\n",
+      "    3837,\n",
+      "    99730,\n",
+      "    112809,\n",
       "    20002,\n",
       "    104378,\n",
-      "    104077,\n",
-      "    101051,\n",
-      "    101929,\n",
-      "    3837,\n",
-      "    100157,\n",
-      "    99929,\n",
-      "    99878,\n",
-      "    99518,\n",
-      "    114660,\n",
-      "    101128,\n",
-      "    8997,\n",
+      "    1773,\n",
+      "    198,\n",
       "    151649,\n",
-      "    271,\n",
+      "    198,\n",
+      "    198,\n",
       "    104455,\n",
       "    9909,\n",
       "    9286,\n",
@@ -312,127 +333,93 @@
       "    11,\n",
       "    15235,\n",
       "    7552,\n",
-      "    20412,\n",
-      "    104255,\n",
-      "    99185,\n",
-      "    104015,\n",
-      "    99774,\n",
-      "    64689,\n",
-      "    99361,\n",
-      "    100650,\n",
-      "    3837,\n",
-      "    99652,\n",
-      "    104210,\n",
-      "    104564,\n",
-      "    105743,\n",
-      "    100756,\n",
-      "    100134,\n",
-      "    57218,\n",
-      "    105717,\n",
-      "    3837,\n",
-      "    100006,\n",
-      "    23031,\n",
-      "    17340,\n",
-      "    99931,\n",
-      "    109496,\n",
-      "    100144,\n",
-      "    71817,\n",
-      "    102181,\n",
-      "    100623,\n",
-      "    21515,\n",
-      "    102141,\n",
-      "    99600,\n",
-      "    1773,\n",
-      "    15469,\n",
+      "    104442,\n",
       "    67338,\n",
+      "    104564,\n",
+      "    105717,\n",
+      "    103971,\n",
+      "    100168,\n",
+      "    9370,\n",
+      "    72448,\n",
+      "    57191,\n",
+      "    99361,\n",
+      "    1773,\n",
+      "    99652,\n",
+      "    102994,\n",
       "    102182,\n",
       "    100134,\n",
-      "    33108,\n",
+      "    5373,\n",
       "    102217,\n",
       "    100134,\n",
-      "    49567,\n",
-      "    39907,\n",
+      "    33108,\n",
+      "    99795,\n",
+      "    102064,\n",
+      "    54542,\n",
+      "    106483,\n",
       "    3837,\n",
-      "    109608,\n",
-      "    111927,\n",
-      "    60548,\n",
-      "    100722,\n",
-      "    105444,\n",
-      "    33071,\n",
-      "    99257,\n",
-      "    90395,\n",
-      "    17714,\n",
-      "    103971,\n",
-      "    99553,\n",
-      "    102041,\n",
-      "    100143,\n",
-      "    5373,\n",
-      "    111540,\n",
-      "    5373,\n",
-      "    105761,\n",
-      "    102450,\n",
-      "    5373,\n",
+      "    32555,\n",
+      "    102182,\n",
+      "    100006,\n",
+      "    75117,\n",
+      "    106888,\n",
+      "    88802,\n",
+      "    3837,\n",
+      "    29524,\n",
       "    107553,\n",
       "    102450,\n",
-      "    49567,\n",
-      "    47874,\n",
-      "    3407,\n",
-      "    104455,\n",
-      "    18493,\n",
-      "    101213,\n",
-      "    99717,\n",
-      "    100629,\n",
-      "    99335,\n",
-      "    99892,\n",
-      "    100162,\n",
-      "    3837,\n",
-      "    77557,\n",
-      "    100182,\n",
-      "    100650,\n",
-      "    9909,\n",
-      "    29524,\n",
+      "    5373,\n",
+      "    105761,\n",
+      "    110498,\n",
+      "    33108,\n",
       "    109044,\n",
-      "    100343,\n",
-      "    5373,\n",
-      "    102146,\n",
-      "    104316,\n",
-      "    64359,\n",
-      "    104863,\n",
-      "    9909,\n",
-      "    104354,\n",
-      "    100359,\n",
-      "    5373,\n",
-      "    105550,\n",
-      "    99426,\n",
-      "    64359,\n",
-      "    100015,\n",
-      "    106483,\n",
+      "    49567,\n",
       "    1773,\n",
-      "    104138,\n",
-      "    104455,\n",
-      "    104847,\n",
-      "    102334,\n",
-      "    102442,\n",
+      "    15469,\n",
+      "    96555,\n",
+      "    101933,\n",
+      "    103952,\n",
+      "    107142,\n",
+      "    33108,\n",
+      "    99257,\n",
+      "    75768,\n",
       "    3837,\n",
-      "    77288,\n",
+      "    104931,\n",
+      "    100182,\n",
+      "    5373,\n",
+      "    100015,\n",
+      "    5373,\n",
+      "    99460,\n",
+      "    108211,\n",
+      "    100650,\n",
+      "    112227,\n",
+      "    102334,\n",
+      "    102575,\n",
+      "    1773,\n",
+      "    103968,\n",
+      "    3837,\n",
+      "    101067,\n",
       "    41146,\n",
-      "    103377,\n",
-      "    105178,\n",
-      "    112811,\n",
-      "    86119,\n",
+      "    106389,\n",
+      "    3837,\n",
       "    74763,\n",
-      "    101217,\n",
-      "    101909,\n",
-      "    100020,\n",
-      "    27442,\n",
+      "    102361,\n",
+      "    105593,\n",
+      "    101888,\n",
+      "    107120,\n",
+      "    5373,\n",
+      "    112811,\n",
+      "    106640,\n",
+      "    99564,\n",
+      "    9370,\n",
+      "    104075,\n",
       "    1773\n",
       "  ],\n",
-      "  \"total_duration\": 4347964417,\n",
-      "  \"load_duration\": 69906776,\n",
+      "  \"total_duration\": 80587533951,\n",
+      "  \"load_duration\": 67590369668,\n",
       "  \"prompt_eval_count\": 13,\n",
-      "  \"prompt_eval_duration\": 253000000,\n",
-      "  \"eval_count\": 298,\n",
-      "  \"eval_duration\": 4018000000\n",
+      "  \"prompt_eval_duration\": 3839000000,\n",
+      "  \"eval_count\": 274,\n",
+      "  \"eval_duration\": 9148000000\n",
       "}\n"
      ]
     }
@@ -702,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
