--- a/llm_backend/docs/supplementary_course/02_AI Agent应用类型及Function Calling开发实战.ipynb
+++ b/llm_backend/docs/supplementary_course/02_AI Agent应用类型及Function Calling开发实战.ipynb
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
-    "client = OpenAI(api_key=\"sk-\")\n",
+    "client = OpenAI(api_key=\"xxx\")\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "  model=\"gpt-4o-mini\",\n",
