--- a/llm_backend/docs/supplementary_course/02_AI Agent应用类型及Function Calling开发实战.ipynb
+++ b/llm_backend/docs/supplementary_course/02_AI Agent应用类型及Function Calling开发实战.ipynb
@@ -177,13 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "97cec412-5b44-473a-9e34-bd85803a1985",
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
-    "client = OpenAI(api_key=\"xxx\")\n",
+    "client = OpenAI(api_key=\"sk-k2_rFXBJbZCUfF9V5H8-6aqRDBKkeBLh5jf8nioNYqT3BlbkFJxxPzRZM_WxQBXqBx5x68-N77txKh0IpTrwC52w4z4A\")\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "  model=\"gpt-4o-mini\",\n",
@@ -312,7 +312,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -327,7 +327,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -350,7 +350,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -365,7 +365,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -380,7 +380,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -451,7 +451,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -466,7 +466,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -481,7 +481,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -2029,7 +2029,7 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -2828,7 +2828,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -2843,7 +2843,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
@@ -2884,7 +2884,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
